fixed overflow

--- a/style.css
+++ b/style.css
@@ -360,6 +360,7 @@ padding-top: 15px !important;
 }
 
 body {
+  overflow: hidden;
   -moz-transform-origin: 0 0;
   left: 0;
   font-family: 'AvenirMedium' !important;
